fix top alignment when aligned left

--- a/src/main/frontend/pipeline-console-view/pipeline-console/main/components/stages.scss
+++ b/src/main/frontend/pipeline-console-view/pipeline-console/main/components/stages.scss
@@ -14,7 +14,7 @@
   &--left {
     --additional-height: 0px;
     position: sticky;
-    top: calc(var(--pgv-header-height) + var(--section-padding));
+    top: var(--pgv-header-height);
     height: calc(
       (100vh + var(--additional-height)) -
         (var(--pgv-header-height) + 100px + var(--section-padding))
